<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="vertical"
        >
        <ImageButton
            android:id="@+id/left_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:onClick="onClick"
            android:scaleType="fitCenter"
            android:src="@drawable/back_arrow" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            >
            <Button
                android:id="@+id/stop"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:layout_centerInParent="true"
                android:text="@string/stop"
                android:onClick="onClick"
                android:textAllCaps="false"
                android:textSize="10sp"
                />
            <Button
                android:id="@+id/left"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:layout_toLeftOf="@id/stop"
                android:layout_alignTop="@id/stop"
                android:text="@string/move_left"
                android:onClick="onClick"
                android:tag="2"
                android:textAllCaps="false"
                android:textSize="10sp"
                />
            <Button
                android:id="@+id/right"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:layout_toRightOf="@id/stop"
                android:layout_alignTop="@id/stop"
                android:text="@string/move_right"
                android:onClick="onClick"
                android:tag="3"
                android:textAllCaps="false"
                android:textSize="10sp"
                />
            <Button
                android:id="@+id/forward"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:layout_above="@id/stop"
                android:layout_centerHorizontal="true"
                android:text="@string/forward"
                android:onClick="onClick"
                android:tag="0"
                android:textAllCaps="false"
                android:textSize="10sp"
                />
            <Button
                android:id="@+id/backward"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:layout_below="@id/stop"
                android:layout_centerHorizontal="true"
                android:text="@string/backward"
                android:onClick="onClick"
                android:tag="1"
                android:textAllCaps="false"
                android:textSize="10sp"
                />
            <Button
                android:id="@+id/turn_left"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:layout_below="@id/left"
                android:layout_alignLeft="@id/left"
                android:text="@string/turn_left"
                android:onClick="onClick"
                android:tag="0"
                android:textAllCaps="false"
                android:textSize="10sp"
                />
            <Button
                android:id="@+id/turn_right"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:layout_below="@id/right"
                android:layout_alignLeft="@id/right"
                android:text="@string/turn_right"
                android:onClick="onClick"
                android:tag="1"
                android:textAllCaps="false"
                android:textSize="10sp"
                />
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            >
            <SeekBar
                android:id="@+id/seek1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:tag="1"
                android:max="180"
                android:progress="90"
                android:layout_margin="2dp"
                android:thumb="@drawable/thumb"
                android:maxHeight="5dp"
                android:minHeight="5dp"
                android:progressDrawable="@drawable/seekbar_progress_drawable"
                android:splitTrack="false"
                />
            <SeekBar
                android:id="@+id/seek2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:tag="3"
                android:max="180"
                android:progress="90"
                android:layout_margin="2dp"
                android:thumb="@drawable/thumb"
                android:maxHeight="5dp"
                android:minHeight="5dp"
                android:progressDrawable="@drawable/seekbar_progress_drawable"
                android:splitTrack="false"
                />
            <SeekBar
                android:id="@+id/seek3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:tag="4"
                android:max="180"
                android:progress="90"
                android:layout_margin="2dp"
                android:thumb="@drawable/thumb"
                android:maxHeight="5dp"
                android:minHeight="5dp"
                android:progressDrawable="@drawable/seekbar_progress_drawable"
                android:splitTrack="false"
                />
            <SeekBar
                android:id="@+id/seek4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:tag="5"
                android:max="180"
                android:progress="90"
                android:layout_margin="2dp"
                android:thumb="@drawable/thumb"
                android:maxHeight="5dp"
                android:minHeight="5dp"
                android:progressDrawable="@drawable/seekbar_progress_drawable"
                android:splitTrack="false"
                />
            <SeekBar
                android:id="@+id/seek5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:tag="6"
                android:max="180"
                android:progress="90"
                android:layout_margin="2dp"
                android:thumb="@drawable/thumb"
                android:maxHeight="5dp"
                android:minHeight="5dp"
                android:progressDrawable="@drawable/seekbar_progress_drawable"
                android:splitTrack="false"
                />
        </LinearLayout>

    </LinearLayout>
    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="3"
        >
        <WebView
            android:id="@+id/video"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            />
    </RelativeLayout>
</LinearLayout>